Instalacion de dependencias

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Arturo Knees <artuknees@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "json-server": "^0.15.0",
     "moment": "^2.29.3"
   },
   "devDependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "webpack": "^5.72.1"
   },
   "optionalDependencies": {
     "eslint": "^8.15.0"
